--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "phpv/phpv",
+  "name": "EKE/phpv",
   "description": "command line tool to swap current apache php version",
   "keywords": ["cli", "php-version", "package"],
   "license": "MIT",
@@ -18,7 +18,7 @@
   },
   "autoload": {
     "psr-4": {
-      "PHPv\\PHPv\\": "src/"
+      "EKE\\PHPv\\": "src/"
     }
   }
 }
