--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
       "email": "ellingsonster@gmail.com"
     }
   ],
-  "type": "project",
+  "type": "library",
   "require": {
     "php": ">=5.4"
   },
